2007-03-08  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/hildon-color-pop-example.c:
	* src/hildon-color-button.c:
	* src/hildon-color-button.h: Correcting the color button popup API as
	suggested by Tommi to follow the GtkComboBox popup API. The propery
	name is now 'popup-shown' and the force-function is _popdown. 

2007-03-08  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* Makefile.am:
	* configure.ac:
	* doc/Makefile.am:
	* po/Makefile.am:
	* po/POTFILES.in:
	* po/en_GB.po: Fixing the 'engineering english' translation and adding
	it back to the build system. Prolly needs some more updates in the
	future when we resync the 'real' translation package names.

2007-03-08  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-color-button-private.h:
	* src/hildon-color-button.c:
	* src/hildon-color-button.h: Adding a property 'is-popped' and some
	functions to pop-up the color selection dialog. 

	* configure.ac:
	* examples/Makefile.am:
	* examples/hildon-color-pop-example.c:  An example that pops-up the
	dialog from another thread.

2007-03-07  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-caption.c:
	* src/hildon-program.c:
	* src/hildon-volumebar-range.h: A few more consolidation corrections.

2007-03-07  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-time-picker.c: Renaming gtk-timeout-update to
	gtk-timeout-repeat.

2007-03-07  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/hildon-hvolumebar-example.c:
	* examples/hildon-vvolumebar-example.c: Making the bars in examples
	larger to see if theeming is correct.

	* src/hildon-time-picker-private.h:
	* src/hildon-time-picker.c: Do not pull the timeout settings in the
	init function. Do it when needed.

2007-03-02  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/Makefile.am:
	* examples/hildon-caption-example.c: