@@ -1,3 +1,8 @@
+2007-03-09  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
+
+	* src/hildon-helper.c: Fixing a double free in
+	_set_insenstive_message. Fixes NB#52928.
+
 2007-03-08  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
 
 	* examples/hildon-color-pop-example.c:
